--- a/consumer/requirements.txt
+++ b/consumer/requirements.txt
@@ -1,4 +1,5 @@
-redis==3.2.100            
-redis-py==3.5.3       
 rq==1.8.0            
 setuptools==52.0.0          
+redis==3.5.0           
+cython
+docker-py     
